@@ -1,6 +1,7 @@
 
 package Paws::MarketplaceCommerceAnalytics::GenerateDataSet;
   use Moose;
+  has CustomerDefinedValues => (is => 'ro', isa => 'Paws::MarketplaceCommerceAnalytics::CustomerDefinedValues', traits => ['NameInRequest'], request_name => 'customerDefinedValues' );
   has DataSetPublicationDate => (is => 'ro', isa => 'Str', traits => ['NameInRequest'], request_name => 'dataSetPublicationDate' , required => 1);
   has DataSetType => (is => 'ro', isa => 'Str', traits => ['NameInRequest'], request_name => 'dataSetType' , required => 1);
   has DestinationS3BucketName => (is => 'ro', isa => 'Str', traits => ['NameInRequest'], request_name => 'destinationS3BucketName' , required => 1);
@@ -38,39 +39,117 @@ Values for attributes that are native types (Int, String, Float, etc) can passed
 =head1 ATTRIBUTES
 
 
+=head2 CustomerDefinedValues => L<Paws::MarketplaceCommerceAnalytics::CustomerDefinedValues>
+
+(Optional) Key-value pairs which will be returned, unmodified, in the
+Amazon SNS notification message and the data set metadata file. These
+key-value pairs can be used to correlated responses with tracking
+information from other systems.
+
+
+
 =head2 B<REQUIRED> DataSetPublicationDate => Str
 
-
+The date a data set was published. For daily data sets, provide a date
+with day-level granularity for the desired day. For weekly data sets,
+provide a date with day-level granularity within the desired week (the
+day value will be ignored). For monthly data sets, provide a date with
+month-level granularity for the desired month (the day value will be
+ignored).
 
 
 
 =head2 B<REQUIRED> DataSetType => Str
 
+The desired data set type.
+
+=over
+
+=item * I<customer_subscriber_hourly_monthly_subscriptions> - Available
+daily by 5:00 PM Pacific Time since 2014-07-21.
+
+=item * I<customer_subscriber_annual_subscriptions> - Available daily
+by 5:00 PM Pacific Time since 2014-07-21.
+
+=item * I<daily_business_usage_by_instance_type> - Available daily by
+5:00 PM Pacific Time since 2015-01-26.
+
+=item * I<daily_business_fees> - Available daily by 5:00 PM Pacific
+Time since 2015-01-26.
+
+=item * I<daily_business_free_trial_conversions> - Available daily by
+5:00 PM Pacific Time since 2015-01-26.
+
+=item * I<daily_business_new_instances> - Available daily by 5:00 PM
+Pacific Time since 2015-01-26.
+
+=item * I<daily_business_new_product_subscribers> - Available daily by
+5:00 PM Pacific Time since 2015-01-26.
+
+=item * I<daily_business_canceled_product_subscribers> - Available
+daily by 5:00 PM Pacific Time since 2015-01-26.
+
+=item * I<monthly_revenue_billing_and_revenue_data> - Available monthly
+on the 4th day of the month by 5:00 PM Pacific Time since 2015-02.
+
+=item * I<monthly_revenue_annual_subscriptions> - Available monthly on
+the 4th day of the month by 5:00 PM Pacific Time since 2015-02.
+
+=item * I<disbursed_amount_by_product> - Available every 30 days by
+5:00 PM Pacific Time since 2012-04.
+
+=item * I<disbursed_amount_by_customer_geo> - Available every 30 days
+by 5:00 PM Pacific Time since 2012-04.
+
+=item * I<disbursed_amount_by_age_of_uncollected_funds> - Available
+every 30 days by 5:00 PM Pacific Time since 2015-01-26.
+
+=item * I<disbursed_amount_by_age_of_disbursed_funds> - Available every
+30 days by 5:00 PM Pacific Time since 2015-01-26.
+
+=item * I<customer_profile_by_industry> - Available daily by 5:00 PM
+Pacific Time since 2015-10-01.
+
+=item * I<customer_profile_by_revenue> - Available daily by 5:00 PM
+Pacific Time since 2015-10-01.
+
+=item * I<customer_profile_by_geography> - Available daily by 5:00 PM
+Pacific Time since 2015-10-01.
+
+=back
 
 
-Valid values are: C<"customer_subscriber_hourly_monthly_subscriptions">, C<"customer_subscriber_annual_subscriptions">, C<"daily_business_usage_by_instance_type">, C<"daily_business_fees">, C<"daily_business_free_trial_conversions">, C<"daily_business_new_instances">, C<"daily_business_new_product_subscribers">, C<"daily_business_canceled_product_subscribers">, C<"monthly_revenue_billing_and_revenue_data">, C<"monthly_revenue_annual_subscriptions">, C<"disbursed_amount_by_product">, C<"disbursed_amount_by_customer_geo">, C<"disbursed_amount_by_age_of_uncollected_funds">, C<"disbursed_amount_by_age_of_disbursed_funds">, C<"customer_profile_by_industry">, C<"customer_profile_by_revenue">
+Valid values are: C<"customer_subscriber_hourly_monthly_subscriptions">, C<"customer_subscriber_annual_subscriptions">, C<"daily_business_usage_by_instance_type">, C<"daily_business_fees">, C<"daily_business_free_trial_conversions">, C<"daily_business_new_instances">, C<"daily_business_new_product_subscribers">, C<"daily_business_canceled_product_subscribers">, C<"monthly_revenue_billing_and_revenue_data">, C<"monthly_revenue_annual_subscriptions">, C<"disbursed_amount_by_product">, C<"disbursed_amount_by_customer_geo">, C<"disbursed_amount_by_age_of_uncollected_funds">, C<"disbursed_amount_by_age_of_disbursed_funds">, C<"customer_profile_by_industry">, C<"customer_profile_by_revenue">, C<"customer_profile_by_geography">
 
 =head2 B<REQUIRED> DestinationS3BucketName => Str
 
-
+The name (friendly name, not ARN) of the destination S3 bucket.
 
 
 
 =head2 DestinationS3Prefix => Str
 
-
+(Optional) The desired S3 prefix for the published data set, similar to
+a directory path in standard file systems. For example, if given the
+bucket name "mybucket" and the prefix "myprefix/mydatasets", the output
+file "outputfile" would be published to
+"s3://mybucket/myprefix/mydatasets/outputfile". If the prefix directory
+structure does not exist, it will be created. If no prefix is provided,
+the data set will be published to the S3 bucket root.
 
 
 
 =head2 B<REQUIRED> RoleNameArn => Str
 
-
+The Amazon Resource Name (ARN) of the Role with an attached permissions
+policy to interact with the provided AWS services.
 
 
 
 =head2 B<REQUIRED> SnsTopicArn => Str
 
-
+Amazon Resource Name (ARN) for the SNS Topic that will be notified when
+the data set has been published or if an error has occurred.
 
 
 
