@@ -15,7 +15,9 @@ Paws::MarketplaceCommerceAnalytics::GenerateDataSetResult
 
 =head2 DataSetRequestId => Str
 
-
+A unique identifier representing a specific request to the
+GenerateDataSet operation. This identifier can be used to correlate a
+request with notifications from the SNS topic.
 
 
 
